* Patch by Andreas Färber: remove undefined S_ISTXT from ALLPERMS. * This fixes bug #2560.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26754 a95241bf-73f2-0310-859d-f6bbb57e9c96